--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,12 +21,15 @@
         </activity>
         <activity
             android:name=".ui.act.ActNote"
+            android:parentActivityName=".ui.act.ActMain"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.act.ActSettings"
+            android:parentActivityName=".ui.act.ActMain"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.act.ActDevelop"
+            android:parentActivityName=".ui.act.ActSettings"
             android:screenOrientation="portrait" />
     </application>
 
