--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".app.ui.act.ActMain"
-            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,16 +20,13 @@
         </activity>
         <activity
             android:name=".app.ui.act.ActNote"
-            android:parentActivityName=".app.ui.act.ActMain"
-            android:screenOrientation="portrait" />
+            android:parentActivityName=".app.ui.act.ActMain" />
         <activity
             android:name=".app.ui.act.ActSettings"
-            android:parentActivityName=".app.ui.act.ActMain"
-            android:screenOrientation="portrait" />
+            android:parentActivityName=".app.ui.act.ActMain" />
         <activity
             android:name=".app.ui.act.ActDevelop"
-            android:parentActivityName=".app.ui.act.ActSettings"
-            android:screenOrientation="portrait" />
+            android:parentActivityName=".app.ui.act.ActSettings" />
     </application>
 
 </manifest>
