--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,12 +32,15 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    def room_version = "1.1.1"
+    def arch_version = "1.1.1"
 
-    implementation "android.arch.persistence.room:runtime:$room_version"
-    annotationProcessor "android.arch.persistence.room:compiler:$room_version"
+    implementation "android.arch.lifecycle:extensions:$arch_version"
+    annotationProcessor "android.arch.lifecycle:compiler:$arch_version"
 
-    testImplementation "android.arch.persistence.room:testing:$room_version"
+    implementation "android.arch.persistence.room:runtime:$arch_version"
+    annotationProcessor "android.arch.persistence.room:compiler:$arch_version"
+
+    testImplementation "android.arch.persistence.room:testing:$arch_version"
 
     def support_version = "27.1.1"
 
