--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "sgtmelon.handynotes"
         minSdkVersion 16
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
 
         javaCompileOptions {
@@ -36,25 +36,28 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    def arch_version = "1.1.1"
+    def arch_version = "2.0.0-beta01"
 
-    implementation "android.arch.lifecycle:extensions:$arch_version"
-    annotationProcessor "android.arch.lifecycle:compiler:$arch_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:$arch_version"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$arch_version"
 
-    implementation "android.arch.persistence.room:runtime:$arch_version"
-    annotationProcessor "android.arch.persistence.room:compiler:$arch_version"
+    implementation "androidx.room:room-runtime:$arch_version"
+    testImplementation "androidx.room:room-testing:$arch_version"
+    annotationProcessor "androidx.room:room-compiler:$arch_version"
 
-    testImplementation "android.arch.persistence.room:testing:$arch_version"
+    def x_ver = "1.0.0-beta01"
 
-    def support_version = "27.1.1"
+    implementation "androidx.appcompat:appcompat:$x_ver"
+    implementation "com.google.android.material:material:$x_ver"
+    implementation "androidx.legacy:legacy-support-v4:$x_ver"
 
-    implementation "com.android.support:appcompat-v7:$support_version"
-    implementation "com.android.support:cardview-v7:$support_version"
-    implementation "com.android.support:design:$support_version"
-    implementation "com.android.support:support-v4:$support_version"
-    implementation "com.android.support:support-vector-drawable:$support_version"
-    implementation "com.android.support:animated-vector-drawable:$support_version"
+    implementation "androidx.cardview:cardview:$x_ver"
 
-    androidTestImplementation "com.android.support.test:runner:1.0.2"
-    androidTestImplementation "com.android.support.test.espresso:espresso-core:3.0.2"
+    implementation "androidx.vectordrawable:vectordrawable:$x_ver"
+    implementation "androidx.vectordrawable:vectordrawable-animated:$x_ver"
+
+    androidTestImplementation "androidx.test:runner:1.1.0-alpha3"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.1.0-alpha3"
+
+    implementation 'com.google.android.material:material:1.0.0-beta01'
 }
