--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,5 +60,5 @@ dependencies {
     androidTestImplementation "androidx.test:runner:1.1.0-alpha3"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.1.0-alpha3"
 
-    implementation 'com.google.android.material:material:1.0.0-beta01'
+    implementation "com.google.android.material:material:1.0.0-beta01"
 }
