--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/App.Light">
+        android:theme="@style/App.Light.UI">
         <activity android:name=".office.blank.BlankAct" />
         <activity
             android:name=".app.view.act.ActSplash"
