--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,6 @@ dependencies {
 
     androidTestImplementation "androidx.test:runner:1.1.0-alpha3"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.1.0-alpha3"
+
+    implementation 'com.romandanylyk:pageindicatorview:1.0.1'
 }
