--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,12 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    def dag_ver = "2.13"
+
+    implementation  "com.google.dagger:dagger:$dag_ver"
+    annotationProcessor "com.google.dagger:dagger-android-processor:2.11"
+    annotationProcessor "com.google.dagger:dagger-compiler:$dag_ver"
+
     def arch_ver = "2.0.0-beta01"
 
     implementation "androidx.lifecycle:lifecycle-extensions:$arch_ver"
