--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "sgtmelon.scriptum"
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0.0"
+        versionCode 2
+        versionName "1.0.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
 
@@ -59,6 +59,9 @@ dependencies {
     implementation "androidx.legacy:legacy-support-v4:$x_ver"
 
     implementation "androidx.cardview:cardview:$x_ver"
+
+    implementation "androidx.recyclerview:recyclerview-selection:$x_ver"
+
     implementation "androidx.vectordrawable:vectordrawable:$x_ver"
     implementation "androidx.vectordrawable:vectordrawable-animated:$x_ver"
 
