--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,16 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion '28.0.2'
+
     defaultConfig {
         applicationId "sgtmelon.scriptum"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 2
         versionName "1.0.1"
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
         vectorDrawables.useSupportLibrary = true
 
         javaCompileOptions {
@@ -18,16 +20,19 @@ android {
             }
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    
     dataBinding {
         enabled = true
     }
@@ -36,13 +41,15 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+   implementation project(":iconanim")
+
     def dag_ver = "2.13"
 
     implementation  "com.google.dagger:dagger:$dag_ver"
     annotationProcessor "com.google.dagger:dagger-compiler:$dag_ver"
     annotationProcessor "com.google.dagger:dagger-android-processor:$dag_ver"
 
-    def arch_ver = "2.0.0-rc01"
+    def arch_ver = "2.0.0"
 
     implementation "androidx.lifecycle:lifecycle-extensions:$arch_ver"
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$arch_ver"
