Модуль safeDialog, рефакторинг интерфейсов, исправление багов, добавление Родительского фрагмента для заметки

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-   implementation project(":iconanim")
+    implementation project(":iconanim")
+    implementation project(":safedialog")
 
     def dag_ver = "2.13"
 
@@ -60,9 +61,10 @@ dependencies {
 
     def x_ver = "1.0.0"
 
-    implementation "com.google.android.material:material:$x_ver"
+
     implementation "androidx.appcompat:appcompat:$x_ver"
     implementation "androidx.cardview:cardview:$x_ver"
+    implementation "com.google.android.material:material:$x_ver"
 
     implementation "androidx.vectordrawable:vectordrawable:$x_ver"
     implementation "androidx.vectordrawable:vectordrawable-animated:$x_ver"
