--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,8 +39,13 @@ dependencies {
     def dag_ver = "2.13"
 
     implementation  "com.google.dagger:dagger:$dag_ver"
-    annotationProcessor "com.google.dagger:dagger-android-processor:2.11"
     annotationProcessor "com.google.dagger:dagger-compiler:$dag_ver"
+    annotationProcessor "com.google.dagger:dagger-android-processor:$dag_ver"
+
+    def bk_ver = "8.8.1"
+
+    implementation "com.jakewharton:butterknife:$bk_ver"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$bk_ver"
 
     def arch_ver = "2.0.0-beta01"
 
