--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,12 +42,7 @@ dependencies {
     annotationProcessor "com.google.dagger:dagger-compiler:$dag_ver"
     annotationProcessor "com.google.dagger:dagger-android-processor:$dag_ver"
 
-    def bk_ver = "8.8.1"
-
-    implementation "com.jakewharton:butterknife:$bk_ver"
-    annotationProcessor "com.jakewharton:butterknife-compiler:$bk_ver"
-
-    def arch_ver = "2.0.0-beta01"
+    def arch_ver = "2.0.0-rc01"
 
     implementation "androidx.lifecycle:lifecycle-extensions:$arch_ver"
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$arch_ver"
