Вынес постоянные url в gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,9 @@ android {
         }
 
         buildConfigField "String", "DB_NAME", '"Scriptum.db"'
+        buildConfigField "String", "MARKET_URL", '"market://details?id="'
+        buildConfigField "String", "BROWSER_URL", '"https://play.google.com/sore/apps/details?id="'
+
     }
 
     compileOptions {
@@ -69,8 +72,6 @@ dependencies {
 
     implementation "androidx.vectordrawable:vectordrawable:$x_ver"
     implementation "androidx.vectordrawable:vectordrawable-animated:$x_ver"
-
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
 
     debugImplementation "androidx.test:runner:1.1.0"
     debugImplementation 'androidx.test:rules:1.1.0'
