--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    
+
     dataBinding {
         enabled = true
     }
@@ -51,7 +51,7 @@ dependencies {
 
     def dag_ver = "2.13"
 
-    implementation  "com.google.dagger:dagger:$dag_ver"
+    implementation "com.google.dagger:dagger:$dag_ver"
     annotationProcessor "com.google.dagger:dagger-compiler:$dag_ver"
     annotationProcessor "com.google.dagger:dagger-android-processor:$dag_ver"
 
@@ -64,19 +64,17 @@ dependencies {
     testImplementation "androidx.room:room-testing:$arch_ver"
     annotationProcessor "androidx.room:room-compiler:$arch_ver"
 
-    def x_ver = "1.0.0"
+    implementation "androidx.appcompat:appcompat:1.0.2"
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation "com.google.android.material:material:1.0.0"
 
-    implementation "androidx.appcompat:appcompat:$x_ver"
-    implementation "androidx.cardview:cardview:$x_ver"
-    implementation "com.google.android.material:material:$x_ver"
+    implementation "androidx.vectordrawable:vectordrawable:1.0.1"
+    implementation "androidx.vectordrawable:vectordrawable-animated:1.0.0"
 
-    implementation "androidx.vectordrawable:vectordrawable:$x_ver"
-    implementation "androidx.vectordrawable:vectordrawable-animated:$x_ver"
+    debugImplementation "androidx.test:runner:1.1.1"
+    debugImplementation "androidx.test:rules:1.1.1"
+    debugImplementation "androidx.test.ext:junit:1.1.0"
+    debugImplementation "androidx.test.espresso:espresso-core:3.1.1"
 
-    debugImplementation "androidx.test:runner:1.1.0"
-    debugImplementation 'androidx.test:rules:1.1.0'
-    debugImplementation "androidx.test.ext:junit:1.0.0"
-    debugImplementation "androidx.test.espresso:espresso-core:3.1.0"
-
-    implementation 'com.romandanylyk:pageindicatorview:1.0.1'
+    implementation "com.romandanylyk:pageindicatorview:1.0.1"
 }
