--- a/iconanim/build.gradle
+++ b/iconanim/build.gradle
@@ -31,12 +31,5 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    def x_ver = "1.0.0"
-
-    implementation "androidx.appcompat:appcompat:$x_ver"
-
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
-
-    testImplementation 'junit:junit:4.12'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
 }
