--- a/safedialog/build.gradle
+++ b/safedialog/build.gradle
@@ -31,12 +31,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    def x_ver = "1.0.0"
-
-    implementation "androidx.appcompat:appcompat:$x_ver"
-    implementation "com.google.android.material:material:$x_ver"
-
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha3'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'com.google.android.material:material:1.0.0'
 }
