--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 28
@@ -49,11 +50,11 @@ dependencies {
     implementation project(":iconanim")
     implementation project(":safedialog")
 
-    def dag_ver = "2.13"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    implementation "com.google.dagger:dagger:$dag_ver"
-    annotationProcessor "com.google.dagger:dagger-compiler:$dag_ver"
-    annotationProcessor "com.google.dagger:dagger-android-processor:$dag_ver"
+    implementation "com.google.dagger:dagger:$dagger_version"
+    annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
+    annotationProcessor "com.google.dagger:dagger-android-processor:$dagger_version"
 
     def arch_ver = "2.0.0"
 
@@ -77,4 +78,8 @@ dependencies {
     debugImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
     implementation 'com.romandanylyk:pageindicatorview:1.0.1'
+}
+
+repositories {
+    mavenCentral()
 }
