--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,8 @@
         android:supportsRtl="true"
         android:theme="@style/App.Light.UI">
 
-        <activity android:name="sgtmelon.scriptum.app.view.parent.BaseActivityParent" />
-
         <activity
-            android:name="sgtmelon.scriptum.app.view.activity.SplashActivity"
+            android:name="sgtmelon.scriptum.app.ui.splash.SplashActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:theme="@style/App.Splash">
             <intent-filter>
@@ -26,7 +24,7 @@
         <activity
             android:name="sgtmelon.scriptum.app.view.activity.IntroActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:parentActivityName="sgtmelon.scriptum.app.view.activity.SplashActivity"
+            android:parentActivityName="sgtmelon.scriptum.app.ui.splash.SplashActivity"
             android:theme="@style/App.Intro">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
