--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ allprojects {
         google()
         maven { url 'https://maven.google.com' }
         jcenter()
+        mavenCentral()
     }
 }
 
