--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
 
     ext.kotlin_version = '1.2.71'
     ext.espresso_version = '3.1.1'
+    ext.dokka_version = '0.9.17'
 
     repositories {
         google()
@@ -14,6 +15,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.0-alpha08'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:$dokka_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
