--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
             }
         }
 
-        buildConfigField "String", "DB_NAME", '"Scriptum.db"'
+        buildConfigField "String", "DB_NAME", '"HandyNotes"'
         buildConfigField "String", "MARKET_URL", '"market://details?id="'
         buildConfigField "String", "BROWSER_URL", '"https://play.google.com/sore/apps/details?id="'
 
