--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,15 @@
 
 buildscript {
 
-    ext.kotlin_version = '1.3.21'
-    ext.espresso_version = '3.1.1'
-    ext.dokka_version = '0.9.17'
+    ext {
+        kotlin_version = '1.3.21'
+        arch_version = "2.0.0"
+
+        mock_version = "1.6.6"
+        espresso_version = '3.1.1'
+
+        dokka_version = '0.9.17'
+    }
 
     repositories {
         google()
