--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,12 @@ android {
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+
+            buildConfigField "int", "INPUT_CONTROL_MAX_SIZE", '200'
+        }
+
+        debug {
+            buildConfigField "int", "INPUT_CONTROL_MAX_SIZE", '5'
         }
     }
 }
