Добавил proGuard для debug
Tag: @Dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,10 @@ android {
         }
 
         debug {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            testProguardFile 'proguard-test-rules.pro'
+
             buildConfigField "int", "INPUT_CONTROL_MAX_SIZE", '5'
         }
     }
