--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,14 +70,23 @@ dependencies {
     implementation project(":iconanim")
     implementation project(":safedialog")
 
+    // Kotlin
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1"
 
-    implementation "androidx.lifecycle:lifecycle-extensions:$arch_version"
-    kapt "androidx.lifecycle:lifecycle-compiler:$arch_version"
+    // AndroidX
 
-    implementation "androidx.room:room-runtime:$arch_version"
-    kapt "androidx.room:room-compiler:$arch_version"
-    testImplementation "androidx.room:room-testing:$arch_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-alpha01"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha01"
+    kapt "androidx.lifecycle:lifecycle-compiler:2.2.0-alpha01"
+
+    implementation 'androidx.room:room-runtime:2.0.0'
+    kapt 'androidx.room:room-compiler:2.0.0'
+    testImplementation 'androidx.room:room-testing:2.0.0'
+
+    // Design
 
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.cardview:cardview:1.0.0'
@@ -85,6 +94,10 @@ dependencies {
 
     implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
     implementation 'androidx.vectordrawable:vectordrawable-animated:1.0.0'
+
+    implementation 'com.romandanylyk:pageindicatorview:1.0.1'
+
+    // Testing
 
     testImplementation 'junit:junit:4.12'
 
@@ -101,5 +114,4 @@ dependencies {
     debugImplementation "androidx.test.espresso:espresso-core:$espresso_version"
     debugImplementation "androidx.test.espresso:espresso-contrib:$espresso_version"
 
-    implementation 'com.romandanylyk:pageindicatorview:1.0.1'
 }
